--- a/metatrain.yaml
+++ b/metatrain.yaml
@@ -15,6 +15,8 @@ discount: 0.99
 num_train_frames: 2000010
 num_seed_frames: 4000
 num_task_frames: 10000
+num_adapt_episodes: 20
+adaption_steps: 1
 # maml settings
 adapt_lr: 0.1
 meta_lr: 1.0
